Fix row gap in wrap component in tablet and mobile view

--- a/testimonials-grid-section-main/css/style.css
+++ b/testimonials-grid-section-main/css/style.css
@@ -220,6 +220,7 @@ main {
   .wrap {
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "a a" "b c" "d d" "e e";
+    row-gap: var(--space-400);
   }
 }
 @media only screen and (max-width: 35rem) {
